coinflip, police: group by interval

--- a/0.Dataanalyse/docs/DataOpgaver.ipynb
+++ b/0.Dataanalyse/docs/DataOpgaver.ipynb
@@ -51,13 +51,13 @@
     "### Trin 1: Data Cleaning og Forberedelse (Pandas)\n",
     "**Rens data:**\n",
     "\n",
-    "    - Fjern rækker med manglende værdier i driver_gender, violation, og stop_outcome, da disse kolonner er afgørende for analysen.\n",
+    "    - Fjern rækker med manglende v½ærdier i driver_gender, violation, og stop_outcome, da disse kolonner er afgørende for analysen.\n",
     "\n",
     "    - Konverter stop_date til en datetime-type, og udtræk år og måned som nye kolonner.\n",
     "    \n",
     "**Alderberegning:**\n",
     "\n",
-    "    - Hvis driver_age_raw er fødselsår, brug NumPy til at beregne alderen (antag, at dataene er fra 2021). Tilføj en ny kolonne age.\n",
+    "    - Hvis driver_age_raw er fødselsår, brug NumPy til at beregne alderen (husk, at datoerne er fra stop_date). Tilføj en ny kolonne age.\n",
     "\n",
     "### Trin 2: Analyse (NumPy og Pandas)\n",
     "\n",
